GL/Projet_GL/src/test/deca/context/invalid/sansObjet/print/invalid_print_comparison_chain.deca
// But : chaîne de comparaisons interdite.

{
    print(3 < 4 < 5);
}

//Incompatible types: cannot compare  boolean with int as int is not int/float